--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
     background-color: rgb(239, 248, 161);
     font-family: Georgia;
 }
-.btn_delete, .btn_edit {
+.btn_delete, .btn_edit, .btn_confirm {
     width: 23px;
     height: 23px;
 }
@@ -62,7 +62,12 @@ body {
     float: right;
     background-image: url("./objects/editimage.png");
 }
+.btn_confirm {
+    float: right;
+    background-image: url("./objects/confirmimage.png");
+}
 .respondentkeys {
+    margin-top: 10px;
     float: left;
 }
 .respondentvalues {
