--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,11 @@ body {
     background: rgb(118,0,236);
     background: linear-gradient(90deg, rgba(118,0,236,0.9332107843137255) 0%, rgba(0,15,144,1) 50%, rgba(118,0,236,0.93) 100%);
 }
+::-webkit-scrollbar {
+    width: 0;
+}
 .mainBody {
-    margin-right: 0;
+    overflow-y: auto;
     margin-left: 10px;
     margin-top: 15px;
     height: 95vh;
@@ -37,8 +40,7 @@ body {
 }
 .respondent {
     display: inline-block;
-    padding-left: 4px;
-    padding-right: 6px;
+    padding-left: 6px;
     padding-top: 4px;
     min-height: 160px;
     min-width: 210px;
