--- a/src/index.css
+++ b/src/index.css
@@ -38,12 +38,13 @@ body {
 .page {
     display: flex;
 }
-.respondent {
+.respondent, .respondentAdder, .respondentEditer {
     display: inline-block;
     padding-left: 6px;
     padding-top: 4px;
+    padding-bottom: 4px;
     min-height: 160px;
-    min-width: 330px;
+    min-width: 320px;
     margin: 10px;
     border-width: 5px;
     border-radius: 10px;
@@ -69,7 +70,6 @@ body {
     background-image: url("./objects/confirmimage.png");
 }
 .respondentkeys {
-    margin-top: 10px;
     float: left;
 }
 .respondentvalues {
@@ -82,4 +82,38 @@ body {
 }
 .respondentpanel, .respondentkeys, .respondentvalues {
     display: inline-block;
+}
+.respondentkeys, .respondentvalues {
+    min-width: 100px;
+}
+.respondentAdder .inputkey {
+    min-height: 21px;
+}
+.respondentAdder {
+    padding-top: 5px;
+    justify-content: space-between;
+}
+.respondentEditer .respondentkeys {
+    float: left;
+    min-height: 21px;
+}
+.respondentEditer .respondentpanel {
+    float: right;
+}
+.respondentEditer {
+    float: left;
+}
+.finder {
+    margin-top: 15px;
+    margin-left: 10px;
+    max-width: 250px;
+    max-height: 125px;
+    background-color:rgb(180, 161, 161);
+    padding: 5px;
+    border-radius: 10px;
+}
+.finder input {
+    border-radius: 5px;
+    border-color:rgb(107, 110, 79);
+    margin-left: 10px;
 }
