--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 body {
-    background: rgb(118,0,236);
-    background: linear-gradient(90deg, rgba(118,0,236,0.9332107843137255) 0%, rgba(0,15,144,1) 50%, rgba(118,0,236,0.93) 100%);
+    background: rgb(66, 0, 133);
+    background: linear-gradient(90deg, rgba(71, 0, 143, 0.933) 0%, rgb(12, 21, 102) 50%, rgba(19, 11, 133, 0.93) 100%);
 }
 ::-webkit-scrollbar {
     width: 0;
+}
+.mainBody h1 {
+    text-align: center;
 }
 .mainBody {
     overflow-y: auto;
@@ -11,8 +14,8 @@ body {
     margin-top: 15px;
     height: 95vh;
     width: 95%;
-    background: rgb(118,0,236);
-    background: linear-gradient(90deg, rgba(118,0,236,0.8435749299719888) 0%, rgba(119,49,184,0.9668242296918768) 44%, rgba(67,59,201,0.7987570028011204) 96%);
+    background: rgb(36, 33, 39);
+    background: linear-gradient(90deg, rgba(21, 20, 22, 0.844) 0%, rgba(42, 39, 202, 0.967) 44%, rgba(20, 20, 22, 0.799) 96%);
     border-radius: 8px;
 }
 .panel {
@@ -20,20 +23,21 @@ body {
     margin-top: 15px;
     margin-bottom: 15px;
     margin-right: 0px;
-    background-color:rgba(75, 203, 212, 0.897);
+    background: linear-gradient(90deg, rgb(56, 1, 107) 0%, rgba(65, 11, 128, 0.967) 44%, rgba(20, 20, 22, 0.799) 96%);
     height: 95vh;
     width: 150px;
     border-radius: 16px;
 }
 .btnreset, .btnshow, .btnadd, .btnupdate {
     position: relative;
-    background-color: lightpink;
+    background: linear-gradient(90deg, rgb(2, 34, 173) 0%, rgba(11, 8, 218, 0.967) 44%, rgba(53, 53, 109, 0.849) 96%);
     font-family: Arial;
     border-radius: 8px;
     color: rgb(0, 0, 0);
     margin: 15px;
     width: 100px;
     height: 35px;
+    color:rgb(255, 255, 255)
 }
 .page {
     display: flex;
@@ -48,9 +52,9 @@ body {
     margin: 10px;
     border-width: 5px;
     border-radius: 10px;
-    border-color:rgb(255, 255, 255);
+    border-color:rgb(44, 150, 221);
     border-style: solid;
-    background-color: rgb(239, 248, 161);
+    background-color: rgb(41, 66, 90);
     font-family: Georgia;
 }
 .btn_delete, .btn_edit, .btn_confirm {
@@ -108,12 +112,14 @@ body {
     margin-left: 10px;
     max-width: 250px;
     max-height: 125px;
-    background-color:rgb(180, 161, 161);
+    background-color:rgb(71, 59, 105);
+    border-color:rgb(0, 0, 0);
     padding: 5px;
     border-radius: 10px;
+    border-width: 2px;
+    border-style: solid;
 }
 .finder input {
-    border-radius: 5px;
-    border-color:rgb(107, 110, 79);
+    border-color:rgb(255, 255, 255);
     margin-left: 10px;
 }
